--- a/content/themes/default/css/style.css
+++ b/content/themes/default/css/style.css
@@ -5585,6 +5585,18 @@ input[type="radio"] .styled:checked + label::after {
 
 }
 
+div.console {
+        background: #131C13;
+        border: #293728 1px solid !important;
+        border-radius: 0px;
+        background: rgba(0, 0, 0, 0.6);
+        padding-left: 5px;
+        padding-right: -5px;
+        font-family: DejaVuSansMono;
+        font-size: 10pt;
+        color: #CCCCCC;
+        min-height: 40%;
+}
 
 /* OFFCANVAS */
 /* ------------------------------- */
